--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,55 @@
-.App {
-background-color: slateblue;}
-
-.header{
-  border: solid;
+*{
+  margin: 0;
+  padding: 0;
+}
+body{
+  background: linear-gradient(#9fff75, #1ec8a6);
+  background-attachment: fixed; 
+}
+nav{
+ 
+  background-color: #5399e4;
+}
+nav .header{
+  color: #E8E8E8;
+  padding-top: 0.3%;
+  padding-bottom: 0.3%;
+}
+article{
+  background-color: #8585FF ;
+  padding-top: 5%;
+  padding-bottom: 2%;
+  padding-left: 30%;
+  padding-right: 30%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+form{
+  text-align: center;
+  background-color: #8585FF;
+  padding-bottom: 3%;
+}
+form input{
+  margin-top: 0.6%;
+  margin-right: 0.3%;
+  border-radius: 25px;
+  height: 30px;
+  text-align: center;
+}
+form button{
+  border-radius: 5px;
+  height: 25px;
+  width: 50px;
+}
+form button:active{
+  background-color:violet;
+}
+form input::placeholder{
+  text-align: center;
 }
 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.WeatherData{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
